Implemented basic user profile editing (#4)
